# computationalphysics

./: .gitignore  Deq_Eular.py  Deq_RK.py  Deq_bvp1_tri.py  Deq_rk4.py  Deq_shoot.py  Deq_solve_eg.py  PDE_Laplace_SOR.py  README.md  aitken.py  answer.txt  calc_pi.py  diff_Richason.py  diff_multipoint.py  ex3_average_error.py  ex3_guess_key.py  ex3_normalize.py  ex3_tran_name.py  example.nb  exercise.py  exercise1.py  exercise2.py  exercise3.py  fit_linear.py  fit_mlinear.py  fit_nonlinear.py  gauss_elim.m  gauss_jordan.py  integ_Romberg.py  integ_complex.py  integ_varstep.py  interp_aitken.py  interp_lagrange.py  lagrange_1.py  linalg_gauss_jordan.py  linalg_gsdl.py  linalg_lu_decom.cpp  linalg_lu_decom.py  linalg_tridag.py  solve_chebyshev.py  (+5 more)
c++_src/: ClassSec6.cpp  Makefile  StudyClass.cpp  StudyOverload.cpp  StudyPolymorphism.cpp  StudySec6.exe.stackdump  StudyTemplate.cpp
c_src/: CMakeLists.txt  Makefile  Makefile.bak  exercise1.c  homework3.c  lib_linalg.cpp.bak  lib_linalg.h  lib_linalg.h.bak  main.c  main.cpp  plot.py  result.txt  sec2.c  sec3.c  sec4.c  sec5.c  test.cpp  test_students_code.c
c_src/include/: GLC.h  libsec2.h  libsec3.h  libsec4.h  libsec5.h
c_src/lib/: libglc.c  libsec2.c  libsec3.c  libsec4.c  libsec5.c
mathematica/: example.nb  mathematica学习.nb  test_DSolve.nb  三体运动.nb  求解薛定谔方程.nb
python/: Deq_Eular.py  Deq_Pre_corr.py  Deq_solve_eg.py  Deq_solve_schrodinger.py  MC_solve_eq.py  PDE_Laplace_SOR.py  SES_QR.py  SymbolsCalc.py  diff_Richason.py  diff_multipoint.py  ex3_matrix_dot.py  fit_linear.py  fit_mlinear.py  fsim_chebyshev.py  (+9 more)
(+6 files in other folders)
